--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ I serve as a journal reviewer for:
                                     <h2 class="title">Selected Publications</h2>(<A href="https://scholar.google.co.uk/citations?user=A0SOBBQAAAAJ&hl=en">Google Scholar</A>)
                                     <div class="row">
 		   <div class="col-md-12">
-                                            <h4 class="pubtitle"><A name="amc" href=".">Time-series Anomaly Detection in Cyber-physical Systems via Neural System Identification and Bayesian Filtering</A></h4>
+                                            <h4 class="pubtitle"><A name="amc" href="./pubs/nsibf.pdf">Time-series Anomaly Detection in Cyber-physical Systems via Neural System Identification and Bayesian Filtering</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong> and PengWei Tian</div>
                                             <div class="pubcite"><span class="label label-warning">Conference Paper</span> 27th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD 2021)</div>
                                         </div>
