--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                     <div class="clearfix visible-sm visible-xs"></div>
                                     <div class="col-sm-12 col-md-7">
                                         <h3 class="title">Bio</h3>
-                                        <p>I am currently an expert research scientist at <A name="siemens" href="https://new.siemens.com/global/en/company/innovation.html">Siemens Corporate Technology</A> (西门子研究院), working on industrial data analytics and artificial intelligence research. </p>
+                                        <p>I am currently a senior research scientist at <A name="siemens" href="https://new.siemens.com/global/en/company/innovation.html">Siemens Corporate Technology</A> (西门子研究院), working on industrial data analytics and artificial intelligence research. </p>
 
                                         <p>Before that, I was a postdoctoral researcher at the <A name="isst" href="https://www.imperial.ac.uk/security-institute/">Institute for Security Science and Technology</A>, <A name="icl" href="https://www.imperial.ac.uk">Imperial College London</A>. </p>
 
