--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@ I serve as a journal reviewer for:
  <li>IEEE Transactions on Reliability</li>
 <li>IEEE Transactions on Intelligent Transportation Systems</li>
 <li>IEEE Transactions on Mobile Computing</li>
+<li>ACM Transactions on Internet of Things</li>
 </ul>
 
 
