--- a/index.html
+++ b/index.html
@@ -344,6 +344,13 @@ I serve as a journal reviewer for:
                                     
                                     <h2 class="title">Selected Publications</h2>(<A href="https://scholar.google.co.uk/citations?user=A0SOBBQAAAAJ&hl=en">Google Scholar</A>)
                                     <div class="row">
+			<div class="col-md-12">
+                                            <h4 class="pubtitle"><A name="amc" href="https://jmlr.org/papers/volume23/21-1273/21-1273.pdf">Efficient Inference for Dynamic Flexible Interactions of Neural Populations</A></h4>
+                        <div class="pubauthor">Feng Zhou, Quyu Kong, Zhijie Deng, Jichao Kan, Yixuan Zhang, <strong>Cheng Feng</strong>, Jun Zhu</div>
+                                            <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Machine Learning Research, 2022</div>
+                                        </div>
+                    <br></br>
+					    
 		   <div class="col-md-12">
 
                                          <h4 class="pubtitle"><A name="amc" href="./pubs/nsibf.pdf">Time Series Anomaly Detection for Cyber-physical Systems via Neural System Identification and Bayesian Filtering</A></h4>
