--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ I serve as a journal reviewer for:
                                     <div class="row">
 			<div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://jmlr.org/papers/volume23/21-1273/21-1273.pdf">Efficient Inference for Dynamic Flexible Interactions of Neural Populations</A></h4>
-                        <div class="pubauthor">Feng Zhou, Quyu Kong, Zhijie Deng, Jichao Kan, Yixuan Zhang, <strong>Cheng Feng</strong>, Jun Zhu</div>
+                        <div class="pubauthor">Feng Zhou, Quyu Kong, Zhijie Deng, Jichao Kan, Yixuan Zhang, <strong>Cheng Feng</strong> and Jun Zhu</div>
                                             <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Machine Learning Research, 2022</div>
                                         </div>
                     <br></br>
