--- a/index.html
+++ b/index.html
@@ -345,6 +345,13 @@ I serve as a journal reviewer for:
                                     <h2 class="title">Selected Publications</h2>(<A href="https://scholar.google.co.uk/citations?user=A0SOBBQAAAAJ&hl=en">Google Scholar</A>)
                                     <div class="row">
 			<div class="col-md-12">
+                                            <h4 class="pubtitle"><A name="amc" href="https://www.sciencedirect.com/science/article/pii/S2666651022000110">StackVAE-G: An Efficient and Interpretable Model for Time Series Anomaly Detection</A></h4>
+                        <div class="pubauthor">Wenkai Li, Wenbo Hu, Ting Chen, Ning Chen and <strong>Cheng Feng</strong></div>
+                                            <div class="pubcite"><span class="label label-success">Journal Paper</span> Elsevier AI Open, 2022</div>
+                                        </div>
+                    <br></br>
+					    
+			<div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://jmlr.org/papers/volume23/21-1273/21-1273.pdf">Efficient Inference for Dynamic Flexible Interactions of Neural Populations</A></h4>
                         <div class="pubauthor">Feng Zhou, Quyu Kong, Zhijie Deng, Jichao Kan, Yixuan Zhang, <strong>Cheng Feng</strong> and Jun Zhu</div>
                                             <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Machine Learning Research, 2022</div>
