--- a/index.html
+++ b/index.html
@@ -361,14 +361,14 @@ I serve as a journal reviewer for:
 		   <div class="col-md-12">
 
                                          <h4 class="pubtitle"><A name="amc" href="./pubs/nsibf.pdf">Time Series Anomaly Detection for Cyber-physical Systems via Neural System Identification and Bayesian Filtering</A></h4>
-                        <div class="pubauthor"><strong>Cheng Feng</strong> and PengWei Tian</div>
+                        <div class="pubauthor"><strong>Cheng Feng</strong> and Pengwei Tian</div>
                                             <div class="pubcite"><span class="label label-warning">Conference Paper</span> 27th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD 2021)</div>
                                         </div>
                     <br></br>                    
 
 <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://arxiv.org/pdf/2004.08762.pdf">RelSen: An Optimization-based Framework for Simultaneously Sensor Reliability Monitoring and Data Cleaning</A></h4>
-                        <div class="pubauthor"><strong>Cheng Feng</strong>, Xiao Liang, Daniel Schneegass and PengWei Tian</div>
+                        <div class="pubauthor"><strong>Cheng Feng</strong>, Xiao Liang, Daniel Schneegass and Pengwei Tian</div>
                                             <div class="pubcite"><span class="label label-warning">Conference Paper</span> 29th ACM International Conference on Information and Knowledge Management (CIKM 2020)</div>
                                         </div>
                     <br></br>
@@ -394,13 +394,13 @@ I serve as a journal reviewer for:
                     <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://www.sciencedirect.com/science/article/pii/S016653161730130X">Accelerating Simulation of Population Continuous Time Markov Chains via Automatic Model Reduction</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong> and Jane Hillston</div>
-                                            <div class="pubcite"><span class="label label-success">Journal Paper</span> Performance Evaluation, 2018</div>
+                                            <div class="pubcite"><span class="label label-success">Journal Paper</span> Elsevier Performance Evaluation, 2018</div>
                                         </div>
                     <br></br>
                                         <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="http://www.sciencedirect.com/science/article/pii/S0166531617300822">Moment-based Availablity Prediction for Bike-sharing Systems</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong>,  Jane Hillston and Daniel Reijsbergen</div>
-                                            <div class="pubcite"><span class="label label-success">Journal Paper</span> Performance Evaluation, 2017</div>
+                                            <div class="pubcite"><span class="label label-success">Journal Paper</span> Elsevier Performance Evaluation, 2017</div>
                                         </div>
                     <br></br>
 
