--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ I serve as a journal reviewer for:
                     <br></br>
 
             <div class="col-md-12">
-                                            <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/US20220206469A1/en">Method and device for determining production cycles of production equipment</A></h4>
+                                            <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/CN113811908A">Method and device for determining production cycles of production equipment</A></h4>
                         <div class="pubauthor">Changwei Loh, <strong>Cheng Feng</strong>, Jingwen Zhu, Shiqiang Yu, Ganghua Wang, Daniel Schneegass</div>
                                         </div>
                     <br></br>       
