--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ I serve as a journal reviewer for:
                             <div class="headercontent">
                                 <div class="section-container">
                                     
-                                    <h2 class="title">Patents</h2>
+                                    <h2 class="title">Published Patents</h2>
                                     <div class="row">
             <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/US20220206469A1">Method and apparatus for configuring processing parameters of production equipment, and computer-readable medium</A></h4>
