--- a/index.html
+++ b/index.html
@@ -157,22 +157,23 @@
                                     <div class="clearfix visible-sm visible-xs"></div>
                                     <div class="col-sm-12 col-md-7">
                                         <h3 class="title">Bio</h3>
-                                        <p>I am a senior key expert research scientist at <A name="siemens" href="https://new.siemens.com/global/en/company/innovation.html">Siemens Technology</A> (西门子研究院), working in the area of industrial data analytics and artificial intelligence. </p>
+                                        <p>I am a senior key expert research scientist at <A name="siemens" href="https://new.siemens.com/global/en/company/innovation.html">Siemens Technology</A> (西门子研究院,北京), working in the area of industrial data analytics and artificial intelligence. </p>
 
                                         <p>Before that, I was a Research Associate at the <A name="isst" href="https://www.imperial.ac.uk/security-institute/">Institute for Security Science and Technology</A>, <A name="icl" href="https://www.imperial.ac.uk">Imperial College London</A>. </p>
 
 <p>I obtained my PhD in Quantitative Modelling with Professor <A name="Jane Hillston" href="http://homepages.inf.ed.ac.uk/jeh/">Jane Hillston</A>  at the <A name="Laboratory for Foundations of Computer Science" href="http://wcms.inf.ed.ac.uk/lfcs/">Laboratory for Foundations of Computer Science </A>, School of Informatics, <A name="Laboratory for Foundations of Computer Science" href="https://www.ed.ac.uk/">University of Edinburgh</A>.  </p>
 
- <p>My research interests are in the areas of performance modelling and machine learning. Over the past years, I have been creating and applying
-formal modelling and machine learning techniques to help build more intelligent, secure and dependable systems for smart city and smart manufacturing applications. </p>  
+ <p>My research focuses on probabilistic modelling and inference for industrial dynamical systems, with applications including anomaly detection, control optimization and performance evaluation. I am looking for highly motivated interns to work with me on above areas. Feel free to drop me an email if you are interested.</p>  
 
-I serve as a journal reviewer for:
+
+					    
+<!-- I serve as a journal reviewer for:
 <ul>
  <li>IEEE Transactions on Reliability</li>
 <li>IEEE Transactions on Intelligent Transportation Systems</li>
 <li>IEEE Transactions on Mobile Computing</li>
 <li>ACM Transactions on Internet of Things</li>
-</ul>
+</ul> -->
 
 
 <p>Contact me:  cfeng783 #at# gmail.com</p>
