--- a/index.html
+++ b/index.html
@@ -527,6 +527,12 @@
                                         </div>
 <br></br>
 
+<div class="col-md-12">
+                                            <h4 class="pubtitle"><A name="amc" href="https://irc.siemens.de/wila/WORK/WPRXY8e2d691c/WO2023272520A1.pdf">Anomaly detection method and apparatus for industrial equipment, electronic device, and storage medium</A></h4>
+                        <div class="pubauthor">Fan Wang, <strong>Cheng Feng</strong>, Congchao Li, Jiawen Chen, Qi Tang, Pengwei Tian</div>
+                                        </div>
+<br></br>
+
 <!--                     <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="http://rvg.web.cse.unsw.edu.au/eptcs/paper.cgi?QAPL2014.5">Patch-based Hybrid Modelling of Spatially Distributed Systems by Using Stochastic HYPE - ZebraNet as an Example</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong></div>
