--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 			<div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://www.sciencedirect.com/science/article/pii/S2666651022000110">StackVAE-G: An Efficient and Interpretable Model for Time Series Anomaly Detection</A></h4>
                         <div class="pubauthor">Wenkai Li, Wenbo Hu, Ting Chen, Ning Chen and <strong>Cheng Feng</strong></div>
-                                            <div class="pubcite"><span class="label label-success">Journal Paper</span> Elsevier AI Open, 2022</div>
+                                            <div class="pubcite"><span class="label label-success">Journal Paper</span> AI Open (Elsevier), 2022</div>
                                         </div>
                     <br></br>
 					    
@@ -395,13 +395,13 @@
                     <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://www.sciencedirect.com/science/article/pii/S016653161730130X">Accelerating Simulation of Population Continuous Time Markov Chains via Automatic Model Reduction</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong> and Jane Hillston</div>
-                                            <div class="pubcite"><span class="label label-success">Journal Paper</span> Elsevier Performance Evaluation, 2018</div>
+                                            <div class="pubcite"><span class="label label-success">Journal Paper</span> Performance Evaluation (Elsevier), 2018</div>
                                         </div>
                     <br></br>
                                         <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="http://www.sciencedirect.com/science/article/pii/S0166531617300822">Moment-based Availablity Prediction for Bike-sharing Systems</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong>,  Jane Hillston and Daniel Reijsbergen</div>
-                                            <div class="pubcite"><span class="label label-success">Journal Paper</span> Elsevier Performance Evaluation, 2017</div>
+                                            <div class="pubcite"><span class="label label-success">Journal Paper</span> Performance Evaluation (Elsevier), 2017</div>
                                         </div>
                     <br></br>
 
