--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
 <br></br>
 
 <div class="col-md-12">
-                                            <h4 class="pubtitle"><A name="amc" href="https://irc.siemens.de/wila/WORK/WPRXY8e2d691c/WO2023272520A1.pdf">Anomaly detection method and apparatus for industrial equipment, electronic device, and storage medium</A></h4>
+                                            <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/WO2023272520A1">Anomaly detection method and apparatus for industrial equipment, electronic device, and storage medium</A></h4>
                         <div class="pubauthor">Fan Wang, <strong>Cheng Feng</strong>, Congchao Li, Jiawen Chen, Qi Tang, Pengwei Tian</div>
                                         </div>
 <br></br>
