--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
 
 <p>In 2016, I obtained my PhD in Quantitative Modelling with Professor <A name="Jane Hillston" href="http://homepages.inf.ed.ac.uk/jeh/">Jane Hillston</A>  at the <A name="Laboratory for Foundations of Computer Science" href="http://wcms.inf.ed.ac.uk/lfcs/">Laboratory for Foundations of Computer Science </A>, School of Informatics, <A name="Laboratory for Foundations of Computer Science" href="https://www.ed.ac.uk/">University of Edinburgh</A>.  </p>
 
- <p>My research focuses on probabilistic modelling and inference for industrial dynamical systems, with applications including anomaly detection, control optimization and performance evaluation. I am looking for highly motivated interns to work with me on above areas. Feel free to drop me an email if you are interested.</p>  
-
+ <p>My research focuses on probabilistic modelling and inference for industrial dynamical systems, with applications including anomaly detection, control optimization and performance evaluation.</p>
+					    
+ <p>I am looking for highly motivated interns to work with me on above areas. Feel free to drop me an email if you are interested.</p>
 
 					    
 <!-- I serve as a journal reviewer for:
