--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
                                         <h3 class="title">Bio</h3>
                                         <p>I am a senior key expert research scientist at <A name="siemens" href="https://new.siemens.com/global/en/company/innovation.html">Siemens Technology</A> (西门子研究院,北京), working in the area of industrial data analytics and artificial intelligence. </p>
 
-                                        <p>During 2016/09 to 2018/02, I was a Research Associate at the <A name="isst" href="https://www.imperial.ac.uk/security-institute/">Institute for Security Science and Technology</A>, <A name="icl" href="https://www.imperial.ac.uk">Imperial College London</A>. </p>
+                                        <p>During 2016/09 to 2018/02, I was a Research Associate in AI and System Security at the <A name="isst" href="https://www.imperial.ac.uk/security-institute/">Institute for Security Science and Technology</A>, <A name="icl" href="https://www.imperial.ac.uk">Imperial College London</A>. </p>
 
 <p>In 2016, I obtained my PhD in Quantitative Modelling with Professor <A name="Jane Hillston" href="http://homepages.inf.ed.ac.uk/jeh/">Jane Hillston</A>  at the <A name="Laboratory for Foundations of Computer Science" href="http://wcms.inf.ed.ac.uk/lfcs/">Laboratory for Foundations of Computer Science </A>, School of Informatics, <A name="Laboratory for Foundations of Computer Science" href="https://www.ed.ac.uk/">University of Edinburgh</A>.  </p>
 
- <p>My research focuses on probabilistic modelling and inference for industrial dynamical systems, with applications including anomaly detection, control optimization and performance evaluation.</p>
+ <p>My research focuses on probabilistic modelling and inference for industrial dynamical systems, with applications including time series forecasting, anomaly detection, control optimization and performance evaluation.</p>
 					    
  <p>I am looking for highly motivated interns to work with me on above areas. Feel free to drop me an email if you are interested.</p>
 
