--- a/index.html
+++ b/index.html
@@ -534,6 +534,25 @@
                                         </div>
 <br></br>
 
+<div class="col-md-12">
+                                            <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/WO2023142080A1">Simulation model calibration method and apparatus, electronic device, and storage medium</A></h4>
+                        <div class="pubauthor"><strong>Cheng Feng</strong>, Pengwei Tian</div>
+                                        </div>
+<br></br>
+	
+<div class="col-md-12">
+                                            <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/WO2023137631A1">Method and apparatus for data driven control optimization for production quality improvement</A></h4>
+                        <div class="pubauthor"><strong>Cheng Feng</strong>, Jinyan Guan, Jie Huang</div>
+                                        </div>
+<br></br>
+
+
+<div class="col-md-12">
+                                            <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/WO2023141766A1">Method and apparatus for optimizing control parameters, storage medium, and electronic device</A></h4>
+                        <div class="pubauthor">Jinyan Guan, Ying Qu, <strong>Cheng Feng</strong>, Xiaonan Liu</div>
+                                        </div>
+<br></br>
+
 <!--                     <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="http://rvg.web.cse.unsw.edu.au/eptcs/paper.cgi?QAPL2014.5">Patch-based Hybrid Modelling of Spatially Distributed Systems by Using Stochastic HYPE - ZebraNet as an Example</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong></div>
