--- a/index.html
+++ b/index.html
@@ -348,6 +348,14 @@ I serve as a reviewer for the following conferences and journals:
                                     
                                     <h2 class="title">Selected Publications</h2>(<A href="https://scholar.google.co.uk/citations?user=A0SOBBQAAAAJ&hl=en">Google Scholar</A>)
                                     <div class="row">
+
+			<div class="col-md-12">
+
+                                         <h4 class="pubtitle"><A name="amc" href="./pubs/gtt.pdf">Only the Curve Shape Matters: Training Foundation Models for Zero-Shot Multivariate Time Series Forecasting through Next Curve Shape Prediction</A></h4>
+                        <div class="pubauthor"><strong>Cheng Feng</strong>, Long Huang and Denis Krompass</div>
+                                            <div class="pubcite"><span class="label label-warning">Preprint</span> </div>
+                                        </div>
+                    <br></br>  
 			<div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://www.sciencedirect.com/science/article/pii/S2666651022000110">StackVAE-G: An Efficient and Interpretable Model for Time Series Anomaly Detection</A></h4>
                         <div class="pubauthor">Wenkai Li, Wenbo Hu, Ting Chen, Ning Chen and <strong>Cheng Feng</strong></div>
