--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ I serve as a reviewer for the following conferences and journals:
 
                                          <h4 class="pubtitle"><A name="amc" href="./pubs/gtt.pdf">Only the Curve Shape Matters: Training Foundation Models for Zero-Shot Multivariate Time Series Forecasting through Next Curve Shape Prediction</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong>, Long Huang and Denis Krompass</div>
-                                            <div class="pubcite"><span class="label label-warning">Preprint</span> </div>
+                                            <div class="pubcite"><span class="label label-info">Preprint</span> </div>
                                         </div>
                     <br></br>  
 			<div class="col-md-12">
