--- a/index.html
+++ b/index.html
@@ -357,6 +357,13 @@ I serve as a reviewer for the following conferences and journals:
                                         </div>
                     <br></br>  
 			<div class="col-md-12">
+
+                                         <h4 class="pubtitle"><A name="amc" href="./index.html">A cGAN Ensemble-Based Uncertainty-Aware Surrogate Model for Offline Model-Based Optimization in Industrial Control Problems</A></h4>
+                        <div class="pubauthor"><strong>Cheng Feng</strong></div>
+                                            <div class="pubcite"><span class="label label-warning">Conference Paper</span> 2024 International Joint Conference on Neural Networks (IJCNN 2024) </div>
+                                        </div>
+                    <br></br>	    
+			<div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://www.sciencedirect.com/science/article/pii/S2666651022000110">StackVAE-G: An Efficient and Interpretable Model for Time Series Anomaly Detection</A></h4>
                         <div class="pubauthor">Wenkai Li, Wenbo Hu, Ting Chen, Ning Chen and <strong>Cheng Feng</strong></div>
                                             <div class="pubcite"><span class="label label-success">Journal Paper</span> AI Open, 2022</div>
