--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ I serve as a reviewer for the following conferences and journals:
                     <br></br>  
 			<div class="col-md-12">
 
-                                         <h4 class="pubtitle"><A name="amc" href="./index.html">A cGAN Ensemble-Based Uncertainty-Aware Surrogate Model for Offline Model-Based Optimization in Industrial Control Problems</A></h4>
+                                         <h4 class="pubtitle"><A name="amc" href="https://arxiv.org/abs/2205.07250">A cGAN Ensemble-Based Uncertainty-Aware Surrogate Model for Offline Model-Based Optimization in Industrial Control Problems</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong></div>
                                             <div class="pubcite"><span class="label label-warning">Conference Paper</span> 2024 International Joint Conference on Neural Networks (IJCNN 2024) </div>
                                         </div>
