--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                     <div class="clearfix visible-sm visible-xs"></div>
                                     <div class="col-sm-12 col-md-7">
                                         <h3 class="title">Bio</h3>
-                                        <p>I am a senior key expert research scientist at <A name="siemens" href="https://new.siemens.com/global/en/company/innovation.html">Siemens Technology</A> (西门子研究院,北京), working in the area of industrial data analytics and artificial intelligence. </p>
+                                        <p>I am a senior key expert research scientist at <A name="siemens" href="https://new.siemens.com/global/en/company/innovation.html">Siemens Technology</A> (西门子研究院,北京), working on applid research in industrial data analytics and artificial intelligence. </p>
 
                                         <p>During 2016/09 to 2018/02, I was a Research Associate in AI and System Security at the <A name="isst" href="https://www.imperial.ac.uk/security-institute/">Institute for Security Science and Technology</A>, <A name="icl" href="https://www.imperial.ac.uk">Imperial College London</A>. </p>
 
