--- a/index.html
+++ b/index.html
@@ -512,13 +512,13 @@ I serve as a reviewer for the following conferences and journals:
                                     <div class="row">
             <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/US20220206469A1">Method and apparatus for configuring processing parameters of production equipment, and computer-readable medium</A></h4>
-                        <div class="pubauthor"><strong>Cheng Feng</strong>, Daniel Schneegass, Ying Qu, Pengwei Tian</div>
+                        <div class="pubauthor"><span class="label label-success">Granted</span> <strong>Cheng Feng</strong>, Daniel Schneegass, Ying Qu, Pengwei Tian</div>
                                         </div>
                     <br></br>
             
             <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/WO2021108960A1">Method and apparatus for sensor measurements processing</A></h4>
-                        <div class="pubauthor"><strong>Cheng Feng</strong>, Xiao Liang, Daniel Schneegass, Pengwei Tian</div>
+                        <div class="pubauthor"><strong>Cheng Feng</strong>, Xiao Liang, Daniel Schneegass, Pengwei Tian <span class="label label-success">Granted</span> </div>
                                         </div>
                     <br></br>
 
