--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ I serve as a reviewer for the following conferences and journals:
             
             <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/WO2021108960A1">Method and apparatus for sensor measurements processing</A></h4>
-                        <div class="pubauthor"><strong>Cheng Feng</strong>, Xiao Liang, Daniel Schneegass, Pengwei Tian <span class="label label-success">Granted</span> </div>
+                        <div class="pubauthor"><strong>Cheng Feng</strong>, Xiao Liang, Daniel Schneegass, Pengwei Tian</div>
                                         </div>
                     <br></br>
 
@@ -542,13 +542,13 @@ I serve as a reviewer for the following conferences and journals:
 
             <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/CN113811908A">Method and device for determining production cycles of production equipment</A></h4>
-                        <div class="pubauthor">Changwei Loh, <strong>Cheng Feng</strong>, Jingwen Zhu, Shiqiang Yu, Ganghua Wang, Daniel Schneegass</div>
+                        <div class="pubauthor"><span class="label label-success">Granted</span> Changwei Loh, <strong>Cheng Feng</strong>, Jingwen Zhu, Shiqiang Yu, Ganghua Wang, Daniel Schneegass</div>
                                         </div>
                     <br></br>       
                                           
             <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/WO2020223965A1">Tool replacement record-based cutting tool life setting method, apparatus and system</A></h4>
-                        <div class="pubauthor"><strong>Cheng Feng</strong>, Daniel Schneegass, Ying Qu, Pengwei Tian, Yue Yu, Changwei Loh</div>
+                        <div class="pubauthor"><span class="label label-success">Granted</span> <strong>Cheng Feng</strong>, Daniel Schneegass, Ying Qu, Pengwei Tian, Yue Yu, Changwei Loh</div>
                                         </div>
 <br></br>
 
@@ -574,6 +574,18 @@ I serve as a reviewer for the following conferences and journals:
 <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/WO2023141766A1">Method and apparatus for optimizing control parameters, storage medium, and electronic device</A></h4>
                         <div class="pubauthor">Jinyan Guan, Ying Qu, <strong>Cheng Feng</strong>, Xiaonan Liu</div>
+                                        </div>
+<br></br>
+
+<div class="col-md-12">
+                                            <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/WO2024050782A1">Method and apparatus for remaining useful life estimation and computer readable storage medium</A></h4>
+                        <div class="pubauthor"><strong>Cheng Feng</strong>, Fan Wang, Shengbo Hu</div>
+                                        </div>
+<br></br>
+
+<div class="col-md-12">
+                                            <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/CN117787268A">Method, apparatus and electronic device for detecting data anomalies, and readable storage medium</A></h4>
+                        <div class="pubauthor"><strong>Cheng Feng</strong>, Ying Qu</div>
                                         </div>
 <br></br>
 
