--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ I serve as a reviewer for the following conferences and journals:
                                     <div class="row">
             <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/US20220206469A1">Method and apparatus for configuring processing parameters of production equipment, and computer-readable medium</A></h4>
-                        <div class="pubauthor"><span class="label label-success">Granted</span> <strong>Cheng Feng</strong>, Daniel Schneegass, Ying Qu, Pengwei Tian</div>
+                        <div class="pubauthor"><strong>Cheng Feng</strong>, Daniel Schneegass, Ying Qu, Pengwei Tian</div>
                                         </div>
                     <br></br>
             
@@ -542,13 +542,13 @@ I serve as a reviewer for the following conferences and journals:
 
             <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/CN113811908A">Method and device for determining production cycles of production equipment</A></h4>
-                        <div class="pubauthor"><span class="label label-success">Granted</span> Changwei Loh, <strong>Cheng Feng</strong>, Jingwen Zhu, Shiqiang Yu, Ganghua Wang, Daniel Schneegass</div>
+                        <div class="pubauthor">Changwei Loh, <strong>Cheng Feng</strong>, Jingwen Zhu, Shiqiang Yu, Ganghua Wang, Daniel Schneegass</div>
                                         </div>
                     <br></br>       
                                           
             <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/WO2020223965A1">Tool replacement record-based cutting tool life setting method, apparatus and system</A></h4>
-                        <div class="pubauthor"><span class="label label-success">Granted</span> <strong>Cheng Feng</strong>, Daniel Schneegass, Ying Qu, Pengwei Tian, Yue Yu, Changwei Loh</div>
+                        <div class="pubauthor"><strong>Cheng Feng</strong>, Daniel Schneegass, Ying Qu, Pengwei Tian, Yue Yu, Changwei Loh</div>
                                         </div>
 <br></br>
 
