--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 I serve as a reviewer for the following conferences and journals:
 <ul>
-<li>KDD, AAAI</li>
+<li>KDD, NeurIPS, AAAI</li>
 <li>IEEE Transactions on Reliability</li>
 <li>IEEE Transactions on Intelligent Transportation Systems</li>
 <li>IEEE Transactions on Mobile Computing</li>
