--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ I serve as a reviewer for the following conferences and journals:
 
                                          <h4 class="pubtitle"><A name="amc" href="https://arxiv.org/abs/2312.10968">PARs: Predicate-based Association Rules for Efficient and Accurate Model-Agnostic Anomaly Explanation</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong></div>
-                                            <div class="pubcite"><span class="label label-info">Preprint</span> </div>
+                                            <div class="pubcite"><span class="label label-warning">Conference Paper</span> 33rd ACM International Conference on Information and Knowledge Management (CIKM 2024) </div>
                                         </div>
                     <br></br>  
 			<div class="col-md-12">
