--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@ I serve as a reviewer for the following conferences and journals:
 
 			<div class="col-md-12">
 
-                                         <h4 class="pubtitle"><A name="amc" href="./pubs/gtt.pdf">Only the Curve Shape Matters: Training Foundation Models for Zero-Shot Multivariate Time Series Forecasting through Next Curve Shape Prediction</A></h4>
+                                         <h4 class="pubtitle"><A name="amc" href="./pubs/gtt.pdf">General Time Transformer: an Encoder-only Foundation Model for Zero-Shot Multivariate Time Series Forecasting</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong>, Long Huang and Denis Krompass</div>
-                                            <div class="pubcite"><span class="label label-info">Preprint</span> </div>
+                                            <div class="pubcite"><span class="label label-warning">Conference Paper</span> 33rd ACM International Conference on Information and Knowledge Management (CIKM 2024)</div>
                                         </div>
                     <br></br>  
 			<div class="col-md-12">
