--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					    
  <p>I am looking for highly motivated interns to work with me on above areas. Feel free to drop me an email if you are interested.</p>
 
-I serve as a reviewer for the following conferences and journals:
+I serve as a PC member or reviewer for the following conferences and journals:
 <ul>
 <li>KDD, NeurIPS, AAAI</li>
 <li>IEEE Transactions on Reliability</li>
@@ -423,19 +423,19 @@ I serve as a reviewer for the following conferences and journals:
                                             <div class="pubcite"><span class="label label-success">Journal Paper</span> Performance Evaluation, 2018</div>
                                         </div>
                     <br></br>
+
+			<div class="col-md-12">
+                                            <h4 class="pubtitle"><A name="amc" href="http://ieeexplore.ieee.org/abstract/document/8023128/">Multi-level Anomaly Detection of Industrial Control Systems via Package Signatures and LSTM Networks</A></h4>
+                        <div class="pubauthor"><strong>Cheng Feng</strong>, Tingting Li and Deeph Chana</div>
+                                            <div class="pubcite"><span class="label label-warning">Conference Paper</span> 47th IEEE/IFIP International Conference on Dependable Systems and Networks (DSN 2017)</div>
+                                        </div>
+			<br></br>
                                         <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="http://www.sciencedirect.com/science/article/pii/S0166531617300822">Moment-based Availablity Prediction for Bike-sharing Systems</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong>,  Jane Hillston and Daniel Reijsbergen</div>
                                             <div class="pubcite"><span class="label label-success">Journal Paper</span> Performance Evaluation, 2017</div>
                                         </div>
                     <br></br>
-
-                    <div class="col-md-12">
-                                            <h4 class="pubtitle"><A name="amc" href="http://ieeexplore.ieee.org/abstract/document/8023128/">Multi-level Anomaly Detection of Industrial Control Systems via Package Signatures and LSTM Networks</A></h4>
-                        <div class="pubauthor"><strong>Cheng Feng</strong>, Tingting Li and Deeph Chana</div>
-                                            <div class="pubcite"><span class="label label-warning">Conference Paper</span> 47th IEEE/IFIP International Conference on Dependable Systems and Networks (DSN 2017)</div>
-                                        </div>
-<br></br>
 
 <!--                     <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="https://link.springer.com/chapter/10.1007/978-3-319-43425-4_9">Moment-based Probabilistic Prediction of Bike Availability for Bike-sharing Systems</A></h4>
