--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ I serve as a PC member or reviewer for the following conferences and journals:
                     <br></br>  
 			<div class="col-md-12">
 
-                                         <h4 class="pubtitle"><A name="amc" href="./pubs/CIKM24_PARs.pdf">PARs: Predicate-based Association Rules for Efficient and Accurate Model-Agnostic Anomaly Explanation</A></h4>
+                                         <h4 class="pubtitle"><A name="amc" href="./pubs/CIKM24_PARs.pdf">PARs: Predicate-based Association Rules for Efficient and Accurate Anomaly Explanation</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong></div>
                                             <div class="pubcite"><span class="label label-warning">Conference Paper</span> 33rd ACM International Conference on Information and Knowledge Management (CIKM 2024) </div>
                                         </div>
