--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ I serve as a PC member or reviewer for the following conferences and journals:
 					    
 		   <div class="col-md-12">
 
-                                         <h4 class="pubtitle"><A name="amc" href="./pubs/nsibf.pdf">Time Series Anomaly Detection for Cyber-physical Systems via Neural System Identification and Bayesian Filtering</A></h4>
+                                         <h4 class="pubtitle"><A name="amc" href="https://dl.acm.org/doi/10.1145/3447548.3467137">Time Series Anomaly Detection for Cyber-physical Systems via Neural System Identification and Bayesian Filtering</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong> and Pengwei Tian</div>
                                             <div class="pubcite"><span class="label label-warning">Conference Paper</span> 27th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD 2021)</div>
                                         </div>
