--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					    
 I serve as a PC member or reviewer for the following conferences and journals:
 <ul>
-<li>KDD, NeurIPS, AAAI</li>
+<li>KDD, NeurIPS, ICLR, AAAI</li>
 <li>IEEE Transactions on Reliability</li>
 <li>IEEE Transactions on Intelligent Transportation Systems</li>
 <li>IEEE Transactions on Mobile Computing</li>
