--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
                                     <div class="clearfix visible-sm visible-xs"></div>
                                     <div class="col-sm-12 col-md-7">
                                         <h3 class="title">Bio</h3>
-                                        <p>I am a senior key expert research scientist at <A name="siemens" href="https://new.siemens.com/global/en/company/innovation.html">Siemens Technology</A> (西门子研究院), working on applied research in industrial data analytics and artificial intelligence. </p>
+                                        <p>I am a senior key expert research scientist at <A name="siemens" href="https://new.siemens.com/global/en/company/innovation.html">Siemens Foundational Technology</A> (西门子研究院), working on applied research in industrial data analytics and artificial intelligence. </p>
 
                                         <p>During 2016/09 to 2018/02, I was a Research Associate in AI and System Security at the <A name="isst" href="https://www.imperial.ac.uk/security-institute/">Institute for Security Science and Technology</A>, <A name="icl" href="https://www.imperial.ac.uk">Imperial College London</A>. </p>
 
-<p>In 2016, I obtained my PhD in Informatics with Professor <A name="Jane Hillston" href="http://homepages.inf.ed.ac.uk/jeh/">Jane Hillston</A>  at the <A name="Laboratory for Foundations of Computer Science" href="http://wcms.inf.ed.ac.uk/lfcs/">Laboratory for Foundations of Computer Science </A>, School of Informatics, <A name="Laboratory for Foundations of Computer Science" href="https://www.ed.ac.uk/">University of Edinburgh</A>.  </p>
+<p>In 2016, I obtained my PhD in Informatics with Professor <A name="Jane Hillston" href="http://homepages.inf.ed.ac.uk/jeh/">Jane Hillston</A>  at the <A name="Laboratory for Foundations of Computer Science" href="http://wcms.inf.ed.ac.uk/lfcs/">Laboratory for Foundations of Computer Science </A>, <A name="School of Informatics" href="https://informatics.ed.ac.uk"> School of Informatics </A>, <A name="Laboratory for Foundations of Computer Science" href="https://www.ed.ac.uk/">University of Edinburgh</A>.  </p>
 
  <p>My research focuses on probabilistic modelling and inference for industrial dynamical systems, with applications including time series forecasting, anomaly detection, control optimization and performance evaluation.</p>
 					    
