--- a/index.html
+++ b/index.html
@@ -349,14 +349,14 @@ I serve as a PC member or reviewer for the following conferences and journals:
 
 			<div class="col-md-12">
 
-                                         <h4 class="pubtitle"><A name="amc" href="./pubs/CIKM24_GTT.pdf">General Time Transformer: an Encoder-only Foundation Model for Zero-Shot Multivariate Time Series Forecasting</A></h4>
+                                         <h4 class="pubtitle"><A name="amc" href="https://doi.org/10.1145/3627673.3679931">General Time Transformer: an Encoder-only Foundation Model for Zero-Shot Multivariate Time Series Forecasting</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong>, Long Huang and Denis Krompass</div>
                                             <div class="pubcite"><span class="label label-warning">Conference Paper</span> 33rd ACM International Conference on Information and Knowledge Management (CIKM 2024)</div>
                                         </div>
                     <br></br>  
 			<div class="col-md-12">
 
-                                         <h4 class="pubtitle"><A name="amc" href="./pubs/CIKM24_PARs.pdf">PARs: Predicate-based Association Rules for Efficient and Accurate Anomaly Explanation</A></h4>
+                                         <h4 class="pubtitle"><A name="amc" href="https://doi.org/10.1145/3627673.3679625">PARs: Predicate-based Association Rules for Efficient and Accurate Anomaly Explanation</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong></div>
                                             <div class="pubcite"><span class="label label-warning">Conference Paper</span> 33rd ACM International Conference on Information and Knowledge Management (CIKM 2024) </div>
                                         </div>
