--- a/index.html
+++ b/index.html
@@ -587,6 +587,12 @@ I serve as a PC member or reviewer for the following conferences and journals:
                                         </div>
 <br></br>
 
+<div class="col-md-12">
+                                            <h4 class="pubtitle"><A name="amc" href="https://patents.google.com/patent/WO2024216497A1/">Methods and apparatuses for acquiring optimal control parameters of pumps, and computer devices</A></h4>
+                        <div class="pubauthor"><strong>Cheng Feng</strong></div>
+                                        </div>
+<br></br>
+
 <!--                     <div class="col-md-12">
                                             <h4 class="pubtitle"><A name="amc" href="http://rvg.web.cse.unsw.edu.au/eptcs/paper.cgi?QAPL2014.5">Patch-based Hybrid Modelling of Spatially Distributed Systems by Using Stochastic HYPE - ZebraNet as an Example</A></h4>
                         <div class="pubauthor"><strong>Cheng Feng</strong></div>
